fix(css): fix 1st block overflow

--- a/css/blocks/block-1/style.css
+++ b/css/blocks/block-1/style.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 .cart__footer {
-  position: sticky;
+  position: absolute;
   left: 0;
   width: 100%;
   bottom: 0;
